# flow

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/flow/core/: action.hpp  application.hpp  assertion.hpp  defines.hpp  engine_interface.hpp  input_system.hpp  input_system_interface.hpp  logger.hpp  window.hpp  window_interface.hpp
include/flow/graphics/: aabb.hpp  bounds.hpp  orthographic_camera.hpp
include/flow/graphics/opengl/: buffer.hpp  commands.hpp  enum_types.hpp  fence.hpp  shader.hpp  texture.hpp  vertex_array.hpp  vertex_attribute.hpp
include/flow/graphics/renderable/: tile.hpp
include/flow/graphics/renderer/: instance_renderer.hpp  line_renderer.hpp  rectangle_renderer.hpp  renderer_config.hpp  sprite_array_renderer.hpp  sprite_atlas_renderer.hpp  sprite_renderer.hpp
include/flow/graphics/sprite/: sprite_animation.hpp  sprite_animation_atlas.hpp
include/flow/graphics/texture/: fixed_image_atlas.hpp  image.hpp  texture_array.hpp  texture_atlas.hpp
include/flow/input/: binding.hpp  binding_context.hpp  binding_enums.hpp  input_binding.hpp  input_code.hpp  input_context.hpp  input_enums.hpp  input_event.hpp  input_system.hpp  input_system_interface.hpp
include/flow/math/: vec2.hpp  vec2_math.hpp
include/flow/physics/: body.hpp  dynamic_body.hpp  static_body.hpp  world.hpp
include/flow/utility/: animation.hpp  animation_controller.hpp  animation_queue.hpp  bounded_cursor.hpp  buddy_partitioner.hpp  compressed_pair.hpp  concepts.hpp  curve.hpp  dense_tree.hpp  ease.hpp  easing.hpp  filesystem.hpp  fixed_point.hpp  helpers.hpp  integer_range.hpp  invariant_ptr.hpp  iostream_view.hpp  istream.hpp  istream_utils.hpp  istream_view.hpp  noise.hpp  numeric.hpp  ostream.hpp  ostream_utils.hpp  ostream_view.hpp  pair_serialization.hpp  path_serialization.hpp  random.hpp  record.hpp  serialization.hpp  sized_int.hpp  sliding_stream_buffer.hpp  sliding_window.hpp  stopwatch.hpp  stream_algorithm.hpp  string_serialization.hpp  time.hpp  traits.hpp  unique_handle.hpp  unit.hpp  (+3 more)
sandbox/: CMakeLists.txt
sandbox/data/shaders/: default_shader.frg  default_shader.vrt  default_shader_color.vrt
sandbox/src/: entry.cpp
sandbox/src/tests/: dense_tree_test.hpp  input_context_test.hpp  input_system_test.hpp  line_renderer_test.hpp  physics_test.hpp  rectangle_renderer_test.hpp  renderer_line_test.hpp  textured_quads_test.hpp  utility_test.hpp
sandbox/src/tests/batch_renderer/: textured_quads_test.hpp
src/core/: application.cpp  entry.cpp  window.cpp
src/input/: input_context.cpp
src/utility/: uuid.cpp
